Updated the CSS

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,6 @@
     padding: 0;
     font-family: "Inter";
     line-height: 150%;
-    font-size: 0.875rem;
     font-weight: 400;
     color: var(--white)
 }
@@ -33,27 +32,33 @@ body {
 
 .card {
     background-color: var(--grey-800);
-    width: 22.75rem;
-    padding: 2.5rem;
+    width: 21.5rem;
+    padding: 1.5rem;
     border-radius: 0.75rem;
 }
 
 .button-group{
+    padding: .75rem 1rem;
     display: flex;
     flex-direction: column;
-    gap: 20px;    
+    gap: 1rem;    
 }
 
 button {
     background-color: var(--grey-700); 
-    font-size: 1rem;
+    font-size: .825rem;
+    font-weight: 600;
     cursor: pointer; /* Pointer/hand icon */
-    padding: 1rem 0;
+    padding: .825rem .25rem;
     border: 0;
     border-radius: 0.5rem;
     box-shadow: 0;
     display: block;
+}
 
+button:hover {
+    background-color: var(--green);
+    color: var(--grey-800);
 }
 
 .profile {
@@ -61,26 +66,30 @@ button {
     flex-direction: column;
     align-items: center; 
     text-align: center;
-    padding: 24px 0;
-    gap: 16px;   
+    padding: .825rem 1.25rem;
+    gap: 1.75rem;   
 }
 
-
 .profile h1 {
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-weight: 700;
 }
 
 .profile h3{
     color: var(--green);
-    font-size: 1rem;
+    font-size: .825rem;
+    font-weight: 600;
+}
+
+.profile p {
+    font-size: .825rem;
     font-weight: 600;
 }
 
 .profile img {
     border-radius: 50%;
-    max-width: 75px;
-    max-height: 75px;
+    max-width: 5.625rem;
+    max-height: 5.625rem;
 }
 
 footer{
@@ -89,12 +98,12 @@ footer{
     bottom: 0;
     width: 100%;
     padding: 18px 0;
-    color: var(--grey-700);
+    color: gray;
     text-align: center;
 }
 
 footer a{
-    color: var(--gray_500);
+    color: gray;
     text-decoration: underline;
 }
 
