--- a/styles.css
+++ b/styles.css
@@ -71,15 +71,16 @@ button:hover {
     gap: 1.75rem;   
 }
 
+
 .profile h1 {
     font-size: 1.5rem;
     font-weight: 700;
+    padding-bottom: 4px;
 }
 
 .profile h2{
     color: var(--green);
     font-size: .825rem;
-    line-height: 170%;
     font-weight: 600;
 }
 
